# mastodon-apod

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.markdown  apod.py  ci-requirements.in  ci-requirements.txt  config.example.toml  dev-requirements.in  dev-requirements.txt  docker-bake.hcl  mastodon-apod.service.example  pyproject.toml  requirements.in  requirements.txt  scrape_alts.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  pytest.yml  uv-lock.yaml
config/: ananas.cfg.example
src/apod/: __init__.py  __main__.py
tests/: test_apod.py  test_apod_bot.py
tests/cassettes/test_apod/: test_extract_url[109018224046459751-https---apod.nasa.gov-apod-ap220918.html].yaml  test_extract_url[109024311093141985-None].yaml  test_extract_url[109069184629858810-https---apod.nasa.gov-apod-ap220927.html].yaml  test_from_html[ap200609.html].yaml  test_from_html[ap211010.html].yaml  test_from_html[ap220330.html].yaml  test_from_html[ap220424.html].yaml  test_from_html[ap231001.html].yaml  test_from_html[ap950622.html].yaml  test_from_html[ap960821.html].yaml  test_from_html[page0].yaml  test_from_html[page1].yaml  test_from_html_alt.yaml  test_from_html_throws_when_not_image_page[https---apod.nasa.gov-apod-ap_faq.html].yaml  test_from_html_throws_when_not_image_page[https---apod.nasa.gov-apod-archivepix.html].yaml  test_from_html_throws_when_not_image_page[https---apod.nasa.gov-apod-calendar-allyears.html].yaml  test_from_html_throws_when_not_image_page[https---apod.nasa.gov-apod-calendar-ca2301.html].yaml  test_from_html_throws_when_not_image_page[https---apod.nasa.gov-apod-calendar-ca9601.html].yaml  test_from_html_throws_when_not_image_page[https---apod.nasa.gov-apod-lib-about_apod.html].yaml  test_from_html_throws_when_not_image_page[https---apod.nasa.gov-apod-lib-aptree.html].yaml  test_from_html_throws_when_not_image_page[https---apod.nasa.gov-apod-lib-edlinks.html].yaml  test_html_video.yaml  test_html_video_alt.yaml  test_link_to_page_doesnt_crash.yaml  test_scraper_get_last_page.yaml
tests/testdata/: LICENSE
