[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name="mastodon-apod"
description="APOD bot for mastodon"
maintainers=[
    {name="codl", email="codl@codl.fr"},
]
dependencies = [
	"beautifulsoup4>=4.8,<4.13",
	"ananas>=1.1.0,<2",
	"mastodon.py>=1.8.1,<2",
	"requests>=2.30,<3",
	"pillow>=10.0,<11",
]
requires-python = ">=3.10"
version = "0.1"

[tool.setuptools]
#packages = []

[tool.ruff]
line-length = 89

[tool.ruff.lint]
select = [
	"E4",
	"E7",
	"E9",
	"F",
	"I",
]

[tool.black]
line-length = 89

[tool.isort]
profile = "black"
line_length = 89

[tool.uv]
dev-dependencies= [
	"pytest",
	"pytest-recording",
	"vcrpy",
	"tox",
]
