[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name="mastodon-apod"
description="APOD bot for mastodon"
maintainers=[
    {name="codl", email="codl@codl.fr"},
]
dependencies = [
	"beautifulsoup4>=4.8,<4.13",
	"ananas>=1.1.0,<2",
	"mastodon.py>=1.8.1,<2",
	"requests>=2.30,<3",
	"pillow>=10.0,<11",
]
requires-python = ">=3.10"
version = "0.1"

[project.optional-dependencies]
test = [
	"pytest>=8.3.2,<9",
	"pytest-recording>=0.13.2,<0.14",
	"vcrpy>=6.0.1,<7",
	"urllib3>=1.26.0,<2",
	"tox>=4",
	"coverage>=7.6.1,<8",
]

[tool.setuptools]
#packages = []

[tool.ruff]
line-length = 89

[tool.ruff.lint]
select = [
	"E4",
	"E7",
	"E9",
	"F",
	"I",
]

[tool.black]
line-length = 89

[tool.isort]
profile = "black"
line_length = 89
