[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name="mastodon-apod"
description="APOD bot for mastodon"
maintainers=[
    {name="codl", email="codl@codl.fr"},
]
dependencies = [
	"beautifulsoup4>=4.8,<4.14",
	"mastodon.py>=1.8.1,<3",
	"requests>=2.30,<3",
	"pillow>=10.0,<12",
	"ada-url>=1.5.0",
	"structlog>=24.4.0,<26",
	"rich>=13.8.0,<14",
	"whenever>=0.6.10",
	"typer>=0.12.5",
	"tomli;python_version<'3.11'"
]
requires-python = ">=3.10"
version = "1.0.0"
classifiers = [
	"License :: OSI Approved :: BSD License",
	"Development Status :: 5 - Production/Stable",

	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.10",
]

[dependency-groups]
test = [
	"pytest>=8.3.2,<9",
	"pytest-recording>=0.13.2,<0.14",
	"vcrpy>=6.0.1,<7",
	"urllib3>=1.26.5,<2",
	"tox>=4",
	"tox-uv>=1.11.3",
	"coverage[toml]>=7.6.1,<8",
]

[tool.setuptools]
#packages = []

[tool.ruff]
line-length = 89

[tool.ruff.lint]
select = [
	"E4",
	"E7",
	"E9",
	"F",
	"I",
]

[tool.black]
line-length = 89

[tool.isort]
profile = "black"
line_length = 89

[tool.coverage.run]
source = [
	"apod",
]
